Refactor messaging payloads for broader JDK compatibility